<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">疯狂英语365</string>
    <string name="action_index">首页</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_upgrade">更新</string>
    <string name="action_download">下载</string>
    <string name="action_feedback">反馈</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_paragraph">ParagraphActivity</string>

</resources>