<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_index"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_index"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_upgrade"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upgrade"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_feedback"/>

</menu>